--- a/Product/ProductStyle.css
+++ b/Product/ProductStyle.css
@@ -193,12 +193,19 @@ margin-top:67px;
     color: #96AD39;
     margin-right: 50px;
 
-    background-color: #ffffff;
-    border-color: #F9F6F1;
-    border-radius: 15%;
+    background: var(--bg-color);
+    border-color: var(--bg-color);
+    border-radius: 20px;
     width: 250px;
     height: 50px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0,3);
+}
+
+.p-buttons button:hover {
+    background: var(--button-color);
+    color: var(--bg-color);
+    border-radius: 20px;
+    transition: 0.2 all linear;
 }
 
 .menu-1{
