--- a/Home/HomeStyle.css
+++ b/Home/HomeStyle.css
@@ -136,11 +136,9 @@ header{
 }
 
 .home-GreenTea{
-    height: 615px;
-    width: 745px;
     position: absolute;
     bottom: 2px;
-    left: -30px;
+    left: -27px;
     z-index: 0;
     width: 117px;
     height: 140px;
@@ -153,11 +151,21 @@ header{
     letter-spacing: 2px;
 }
 
+.home-text span{
+    font-size: 3.4rem;
+    color: var(--button-color);
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
+
 .home-text p{
     font-size: 0.938rem;
     color: black;
     margin: 0.5rem 0 1.4rem;
     font-family: inter;
+    max-width: calc(100% - 524px); /* Ukuran gambar + padding yang diberikan (474px + 50px padding kiri) */
+    margin-right: 24px; /* Memberikan jarak dari tepi gambar */
+    text-align: justify; /* Menjadikan teks menjadi justify content */
 }
 
 /* Best Products */
@@ -397,6 +405,143 @@ header{
     margin-right: 24px; /* Memberikan jarak dari tepi gambar */
     text-align: justify; /* Menjadikan teks menjadi justify content */
 }
+
+/* Quiz */
+
+/* quiz container */
+.quiz {
+    margin-top: 20px;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    padding-top: 150px; /* Adjust the value to move the quiz down */
+}
+
+/* h2 within .quiz */
+.quiz h2 {
+    text-align: center; /* Center the text horizontally */
+    padding-bottom: 450px;
+    color: var(--main-color);
+    font-size: 35px;
+}
+
+/* Button Tab Container */
+.tab {
+    position: absolute;
+    right: 10px;
+    display: flex;
+    flex-direction: column; /* Stack buttons vertically */
+    margin-top: -420px;
+}
+
+/* Button Tab */
+.tab button,
+.tab button img {
+    border-radius: 100%;
+    border: none;
+    outline: none;
+    width: 107px;
+    height: 107px;
+    margin-bottom: 40px; /* Adjust as needed to create vertical spacing */
+    display: block;
+}
+
+/* button on hover */
+.tab button:hover {
+    background-color: var(--bg-color);
+    border: none;
+    outline: none;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+    background-color: var(--second-color);
+    border: none;
+    outline: none;
+    cursor: pointer;
+    position: relative; /* Set position to relative */
+}
+
+.tab button.active::before {
+    content: ""; /* Add an empty content */
+    position: absolute; /* Set position to absolute */
+    top: 50%; /* Align to the middle vertically */
+    left: 50%; /* Align to the middle horizontally */
+    transform: translate(-50%, -50%); /* Center the background */
+    width: 110px; /* Cover the entire button */
+    height: 110px; /* Cover the entire button */
+    border-radius: 100%;
+    border: none;
+    outline: none;
+    box-shadow: 2px 2px 8px 2px var(--main-color);
+}
+
+/* tab content */
+.tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border-top: none;
+}
+
+.tabcontent img {
+    position: absolute;
+    border-radius: 100%;
+    height: 518px;
+    width: 533px;
+    left: -100px;
+    margin-top: -460px;
+    flex-direction: column; /* Stack buttons vertically */
+}
+
+.box {
+    transform: translateY(-50%);
+    text-align: center; /* Center the text horizontally */
+    font-size: 20px;
+    margin-top: -270px;
+}
+
+.box h4 {
+    font-style: initial;
+    font-size: 25px;
+    color: var(--button-color);
+    max-width: calc(100% - 224px); /* Ukuran gambar + padding yang diberikan (474px + 50px padding kiri) */
+    margin-right: 24px; /* Memberikan jarak dari tepi gambar */
+    text-align: center; /* Menjadikan teks menjadi justify content */
+
+}
+
+.box p {
+    font-family: 'inter', sans-serif;
+    font-style: initial;
+    font-size: 15px;
+    padding-left: 380px;
+    max-width: calc(100% - 124px); /* Ukuran gambar + padding yang diberikan (474px + 50px padding kiri) */
+    margin-right: 24px; /* Memberikan jarak dari tepi gambar */
+    text-align: justify; /* Menjadikan teks menjadi justify content */
+}
+
+.box button{
+    width: 100px;
+    height: 30px;
+    border-radius: 10px;
+    color: #ffffff;
+    background-color: var(--button-color);
+    outline: none;
+    border: none;
+    font-size: 17px;
+    font-display: center;
+    margin-left: 700px; 
+    margin-top: 100px;
+}
+
+.shapeConten{
+    background-color: var(--main-color);
+    height: 518px;
+    width: 40px;
+    margin-left: -100px;
+    margin-top: -484px;
+}
+
 
 
 
