--- a/Product/ProductStyle.css
+++ b/Product/ProductStyle.css
@@ -255,13 +255,14 @@ margin-top:67px;
 
 
 /* Section TeavoU Product START */
+/* Button Product */
 .product{
     font-size: 28px;
     color: var(--main-color);
 }
 
 .product-text h2{
-    margin-top: 83px;
+    margin-top: 30px;
     
 }
 
@@ -274,7 +275,7 @@ margin-top:67px;
     position: flex;
     display: flex;
     flex-wrap: wrap;  
-    margin: 30px 100px 30px 30px;   
+    margin: 50px 100px 50px 30px;   
     justify-content: center;  
 }
 
@@ -307,10 +308,10 @@ margin-top:67px;
     width: 100%;
     justify-content: center;
     align-items: center;
-    margin-top: 91px;
+    margin-top: 50px;
     margin-bottom: 99px;
     justify-content: space-around;
-    padding: 10px;
+    padding: 10px; 
 }
 
 .content{
@@ -330,18 +331,41 @@ margin-top:67px;
 .content>img{
     align-items: center;
     width: 100%;
+    padding: 2%;
     object-fit: cover;
     margin-bottom: 15px;
 }
 
 .content>h5{
-    align-items: center;
-    margin: 10px;
+    text-align: center;
+    margin-bottom: 5px;
     font-size: 20px;
 }
 
 .content p{
     padding: 10px;
+    font-family: inter;
+    max-width: 100%;
+    max-height: 100px;
+    white-space: normal;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    
+    /* word-wrap: normal; */
+    /* word-wrap: break-word; */
+    /* word-break: keep-all; */
+    /* word-break: break-all; */
+    
+    /* white-space: pre-line; */
+    /* white-space: nowrap; */
+    /* white-space: pre; */
+    /* white-space: pre-wrap; */
+    /* white-space: break-spaces; */
+    
+    /* overflow: scroll; */
+    /* overflow: visible; */
+
+    /* text-overflow: clip; */
 }
 
 .content button{
@@ -361,7 +385,7 @@ margin-top:67px;
 }
 
 .content button:hover{
-    background: #ffffff;
-    color: var(--button-color);
+    background: var(--main-color);
+    color: var(--bg-color);
     transition: 0.2 all linear;
 }
